<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/textView26"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/textView25"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginStart="57dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView25"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintEnd_toStartOf="@+id/textView21"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginStart="57dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toStartOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginTop="69dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginTop="69dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginStart="57dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="69dp"
        android:background="@drawable/textview_border"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repaint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

</androidx.constraintlayout.widget.ConstraintLayout>